--- a/proyecto pagina/tablaLiga2024.html
+++ b/proyecto pagina/tablaLiga2024.html
@@ -230,139 +230,144 @@
                     </tr>
                     <tr>
                         <td>18</td>
-                        <td>Racing</td>
-                        <td>39</td>
-                        <td>18</td>
-                        <td>11</td>
-                        <td>4</td>
-                        <td>3</td>
-                        <td>35</td>
-                        <td>18</td>
-                        <td>+17</td>
+                        <td>Tigre</td>
+                        <td>22</td>
+                        <td>26</td>
+                        <td>6</td>
+                        <td>8</td>
+                        <td>7</td>
+                        <td>25</td>
+                        <td>24</td>
+                        <td>+1</td>
                     </tr>
                     <tr>
                         <td>19</td>
-                        <td>Racing</td>
-                        <td>39</td>
-                        <td>18</td>
-                        <td>11</td>
-                        <td>4</td>
-                        <td>3</td>
-                        <td>35</td>
-                        <td>18</td>
-                        <td>+17</td>
+                        <td>Lanus</td>
+                        <td>22</td>
+                        <td>26</td>
+                        <td>6</td>
+                        <td>8</td>
+                        <td>7</td>
+                        <td>22</td>
+                        <td>28</td>
+                        <td>-6</td>
                     </tr>
                     <tr>
                         <td>20</td>
-                        <td>Racing</td>
-                        <td>39</td>
-                        <td>18</td>
-                        <td>11</td>
-                        <td>4</td>
-                        <td>3</td>
-                        <td>35</td>
-                        <td>18</td>
-                        <td>+17</td>
+                        <td>RosarioCentral</td>
+                        <td>22</td>
+                        <td>25</td>
+                        <td>6</td>
+                        <td>7</td>
+                        <td>9</td>
+                        <td>23</td>
+                        <td>22</td>
+                        <td>+1</td>
                     </tr>
                     <tr>
                         <td>21</td>
-                        <td>Racing</td>
-                        <td>39</td>
-                        <td>18</td>
-                        <td>11</td>
-                        <td>4</td>
-                        <td>3</td>
-                        <td>35</td>
-                        <td>18</td>
-                        <td>+17</td>
+                        <td>CentraCba(SdE)</td>
+                        <td>22</td>
+                        <td>25</td>
+                        <td>6</td>
+                        <td>7</td>
+                        <td>9</td>
+                        <td>23</td>
+                        <td>28</td>
+                        <td>-5</td>
                     </tr>
                     <tr>
                         <td>22</td>
-                        <td>Racing</td>
-                        <td>39</td>
-                        <td>18</td>
-                        <td>11</td>
-                        <td>4</td>
-                        <td>3</td>
-                        <td>35</td>
-                        <td>18</td>
-                        <td>+17</td>
+                        <td>IndRivadavia</td>
+                        <td>22</td>
+                        <td>25</td>
+                        <td>6</td>
+                        <td>7</td>
+                        <td>9</td>
+                        <td>15</td>
+                        <td>23</td>
+                        <td>-8</td>
                     </tr>
                     <tr>
                         <td>23</td>
-                        <td>Racing</td>
-                        <td>39</td>
-                        <td>18</td>
-                        <td>11</td>
-                        <td>4</td>
-                        <td>3</td>
-                        <td>35</td>
-                        <td>18</td>
-                        <td>+17</td>
+                        <td>Argentinos</td>
+                        <td>22</td>
+                        <td>23</td>
+                        <td>6</td>
+                        <td>5</td>
+                        <td>10</td>
+                        <td>17</td>
+                        <td>22</td>
+                        <td>-5</td>
                     </tr>
                     <tr>
                         <td>24</td>
-                        <td>Racing</td>
-                        <td>39</td>
-                        <td>18</td>
-                        <td>11</td>
-                        <td>4</td>
-                        <td>3</td>
-                        <td>35</td>
-                        <td>18</td>
-                        <td>+17</td>
+                        <td>Banfield</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>5</td>
+                        <td>7</td>
+                        <td>9</td>
+                        <td>20</td>
+                        <td>27</td>
+                        <td>-7</td>
                     </tr>
                     <tr>
                         <td>25</td>
-                        <td>Racing</td>
-                        <td>39</td>
-                        <td>18</td>
-                        <td>11</td>
-                        <td>4</td>
-                        <td>3</td>
-                        <td>35</td>
-                        <td>18</td>
-                        <td>+17</td>
+                        <td>DefYJusticia</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>5</td>
+                        <td>7</td>
+                        <td>9</td>
+                        <td>19</td>
+                        <td>30</td>
+                        <td>-11</td>
                     </tr>
                     <tr>
                         <td>26</td>
-                        <td>Racing</td>
-                        <td>39</td>
-                        <td>18</td>
-                        <td>11</td>
+                        <td>Sarmiento(J)</td>
+                        <td>22</td>
+                        <td>21</td>
                         <td>4</td>
-                        <td>3</td>
-                        <td>35</td>
-                        <td>18</td>
-                        <td>+17</td>
+                        <td>9</td>
+                        <td>9</td>
+                        <td>15</td>
+                        <td>23</td>
+                        <td>-8</td>
                     </tr>
                     <tr>
                         <td>27</td>
-                        <td>Racing</td>
-                        <td>39</td>
-                        <td>18</td>
+                        <td>Newells</td>
+                        <td>22</td>
+                        <td>21</td>
+                        <td>5</td>
+                        <td>6</td>
                         <td>11</td>
-                        <td>4</td>
-                        <td>3</td>
-                        <td>35</td>
-                        <td>18</td>
-                        <td>+17</td>
+                        <td>15</td>
+                        <td>29</td>
+                        <td>-14</td>
                     </tr>
                     <tr>
                     <td>28</td>
-                    <td>Racing</td>
-                    <td>39</td>
-                    <td>18</td>
-                    <td>11</td>
-                    <td>4</td>
+                    <td>Barracas</td>
+                    <td>22</td>
+                    <td>16</td>
                     <td>3</td>
-                    <td>35</td>
-                    <td>18</td>
-                    <td>+17</td>
+                    <td>7</td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>29</td>
+                    <td>-19</td>
                 </tr>
                 </tr>
             </tbody>
         </table>
+    </div>
+    <div>
+        <a id="a1" href="GyA.html">
+            Tabla De Goleadores y Asistidores
+           </a>
     </div>
 </body>
 </html>
