--- a/proyecto pagina/GyA.html
+++ b/proyecto pagina/GyA.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./css/GyA.css">
 </head>
 <body>
+    <a id="a2" href="index.html">
+        Volver
+       </a>
     <div class="container">
         <div class="tablas">
             <section class="tabla">
@@ -102,5 +105,14 @@
             </section>
         </div>
     </div>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-logo">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/8/85/Logo_lpf_afa.png" alt="Logo Fútbol Argentino">
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Fútbol Argentino. Todos los derechos reservados.</p>
+            </div>
+    </footer> 
 </body>
 </html>
