--- a/proyecto pagina/tablaAnual.html
+++ b/proyecto pagina/tablaAnual.html
@@ -4,8 +4,383 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/tabla2024.css">
 </head>
 <body>
-    
+    <a id="a2" href="index.html">
+        Volver
+       </a>
+    <div class="container">
+        <h1>Clasificaión a Copas Internacionales</h1>
+        <h2>Primeros 3 clasifican a copa libertadores+actual campeon</h2>
+        <h2>Campeon de copa Argentina clasifica a libertadores</h2>
+        <h2>Los siguientes 6 clasifican a copa sudamericana</h2>
+        <table class="tabla-equipos">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Equipo</th>
+                    <th>Pts</th>
+                    <th>PJ</th>
+                    <th>PG</th>
+                    <th>PP</th>
+                    <th>PE</th>
+                    <th>GF</th>
+                    <th>GC</th>
+                    <th>DG</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Velez</td>
+                    <td>68</td>
+                    <td>36</td>
+                    <td>19</td>
+                    <td>11</td>
+                    <td>6</td>
+                    <td>49</td>
+                    <td>28</td>
+                    <td>+21</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Racing</td>
+                    <td>64</td>
+                    <td>37</td>
+                    <td>19</td>
+                    <td>7</td>
+                    <td>11</td>
+                    <td>58</td>
+                    <td>33</td>
+                    <td>+25</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>River</td>
+                    <td>63</td>
+                    <td>36</td>
+                    <td>16</td>
+                    <td>15</td>
+                    <td>5</td>
+                    <td>56</td>
+                    <td>26</td>
+                    <td>+30</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Talleres(C)</td>
+                    <td>60</td>
+                    <td>36</td>
+                    <td>16</td>
+                    <td>15</td>
+                    <td>5</td>
+                    <td>50</td>
+                    <td>38</td>
+                    <td>+12</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Huracan</td>
+                    <td>58</td>
+                    <td>37</td>
+                    <td>15</td>
+                    <td>13</td>
+                    <td>9</td>
+                    <td>39</td>
+                    <td>27</td>
+                    <td>+12</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>Estudiantes</td>
+                    <td>57</td>
+                    <td>36</td>
+                    <td>15</td>
+                    <td>12</td>
+                    <td>9</td>
+                    <td>44</td>
+                    <td>32</td>
+                    <td>+12</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>GodoyCruz</td>
+                    <td>57</td>
+                    <td>37</td>
+                    <td>15</td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>39</td>
+                    <td>31</td>
+                    <td>+8</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>Boca</td>
+                    <td>56</td>
+                    <td>36</td>
+                    <td>15</td>
+                    <td>11</td>
+                    <td>10</td>
+                    <td>47</td>
+                    <td>35</td>
+                    <td>+12</td>
+                    <tr>
+                        <td>9</td>
+                        <td>Union</td>
+                        <td>56</td>
+                        <td>36</td>
+                        <td>15</td>
+                        <td>11</td>
+                        <td>10</td>
+                        <td>40</td>
+                        <td>35</td>
+                        <td>+5</td>
+                    </tr>
+                    <tr>
+                        <td>10</td>
+                        <td>Independiente</td>
+                        <td>53</td>
+                        <td>36</td>
+                        <td>12</td>
+                        <td>17</td>
+                        <td>7</td>
+                        <td>33</td>
+                        <td>24</td>
+                        <td>+9</td>
+                    </tr>
+                    <tr>
+                        <td>11</td>
+                        <td>Argentinos</td>
+                        <td>52</td>
+                        <td>37</td>
+                        <td>14</td>
+                        <td>10</td>
+                        <td>13</td>
+                        <td>43</td>
+                        <td>37</td>
+                        <td>+6</td>
+                    </tr>
+                    <tr>
+                        <td>12</td>
+                        <td>DefYJusticia</td>
+                        <td>52</td>
+                        <td>37</td>
+                        <td>13</td>
+                        <td>13</td>
+                        <td>11</td>
+                        <td>41</td>
+                        <td>44</td>
+                        <td>-3</td>
+                    </tr>
+                    <tr>
+                        <td>13</td>
+                        <td>Platense</td>
+                        <td>51</td>
+                        <td>37</td>
+                        <td>12</td>
+                        <td>15</td>
+                        <td>10</td>
+                        <td>28</td>
+                        <td>30</td>
+                        <td>-2</td>
+                    </tr>
+                    <tr>
+                        <td>14</td>
+                        <td>Lanus</td>
+                        <td>50</td>
+                        <td>36</td>
+                        <td>13</td>
+                        <td>11</td>
+                        <td>12</td>
+                        <td>42</td>
+                        <td>42</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>15</td>
+                        <td>Instituto</td>
+                        <td>49</td>
+                        <td>37</td>
+                        <td>14</td>
+                        <td>7</td>
+                        <td>16</td>
+                        <td>47</td>
+                        <td>42</td>
+                        <td>+5</td>
+                    </tr>
+                    <tr>
+                        <td>16</td>
+                        <td>Atl.Tucuman</td>
+                        <td>46</td>
+                        <td>37</td>
+                        <td>11</td>
+                        <td>13</td>
+                        <td>13</td>
+                        <td>33</td>
+                        <td>47</td>
+                        <td>-14</td>
+                    </tr>
+                    <tr>
+                        <td>17</td>
+                        <td>Gimnasia</td>
+                        <td>45</td>
+                        <td>36</td>
+                        <td>12</td>
+                        <td>9</td>
+                        <td>15</td>
+                        <td>38</td>
+                        <td>42</td>
+                        <td>-4</td>
+                    </tr>
+                    <tr>
+                        <td>18</td>
+                        <td>Riestra</td>
+                        <td>45</td>
+                        <td>37</td>
+                        <td>11</td>
+                        <td>12</td>
+                        <td>14</td>
+                        <td>32</td>
+                        <td>40</td>
+                        <td>-8</td>
+                    </tr>
+                    <tr>
+                        <td>19</td>
+                        <td>Newells</td>
+                        <td>45</td>
+                        <td>37</td>
+                        <td>12</td>
+                        <td>9</td>
+                        <td>16</td>
+                        <td>30</td>
+                        <td>45</td>
+                        <td>-15</td>
+                    </tr>
+                    <tr>
+                        <td>20</td>
+                        <td>Belgrano</td>
+                        <td>44</td>
+                        <td>36</td>
+                        <td>10</td>
+                        <td>14</td>
+                        <td>12</td>
+                        <td>46</td>
+                        <td>46</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>21</td>
+                        <td>SanLorenzo</td>
+                        <td>44</td>
+                        <td>37</td>
+                        <td>10</td>
+                        <td>14</td>
+                        <td>13</td>
+                        <td>29</td>
+                        <td>35</td>
+                        <td>-6</td>
+                    </tr>
+                    <tr>
+                        <td>22</td>
+                        <td>Barracas</td>
+                        <td>42</td>
+                        <td>36</td>
+                        <td>11</td>
+                        <td>9</td>
+                        <td>16</td>
+                        <td>28</td>
+                        <td>44</td>
+                        <td>-14</td>
+                    </tr>
+                    <tr>
+                        <td>23</td>
+                        <td>RosarioCentral</td>
+                        <td>40</td>
+                        <td>36</td>
+                        <td>10</td>
+                        <td>10</td>
+                        <td>16</td>
+                        <td>33</td>
+                        <td>40</td>
+                        <td>-7</td>
+                    </tr>
+                    <tr>
+                        <td>24</td>
+                        <td>Banfield</td>
+                        <td>39</td>
+                        <td>37</td>
+                        <td>9</td>
+                        <td>12</td>
+                        <td>16</td>
+                        <td>34</td>
+                        <td>44</td>
+                        <td>-10</td>
+                    </tr>
+                    <tr>
+                        <td>25</td>
+                        <td>CentralCdba(SdE)</td>
+                        <td>36</td>
+                        <td>36</td>
+                        <td>8</td>
+                        <td>12</td>
+                        <td>16</td>
+                        <td>33</td>
+                        <td>48</td>
+                        <td>-15</td>
+                    </tr>
+                    <tr>
+                        <td>26</td>
+                        <td>Tigre</td>
+                        <td>34</td>
+                        <td>37</td>
+                        <td>8</td>
+                        <td>10</td>
+                        <td>19</td>
+                        <td>33</td>
+                        <td>53</td>
+                        <td>-20</td>
+                    </tr>
+                    <tr>
+                        <td>27</td>
+                        <td>IndRivadavia</td>
+                        <td>33</td>
+                        <td>36</td>
+                        <td>8</td>
+                        <td>9</td>
+                        <td>19</td>
+                        <td>28</td>
+                        <td>48</td>
+                        <td>-20</td>
+                    </tr>
+                    <tr>
+                    <td>28</td>
+                    <td>Sarmiento(J)</td>
+                    <td>30</td>
+                    <td>36</td>
+                    <td>6</td>
+                    <td>12</td>
+                    <td>18</td>
+                    <td>24</td>
+                    <td>42</td>
+                    <td>-18</td>
+                </tr>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <br>
+    <br>
+    <br>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-logo">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/8/85/Logo_lpf_afa.png" alt="Logo Fútbol Argentino">
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Fútbol Argentino. Todos los derechos reservados.</p>
+            </div>
+    </footer> 
 </body>
 </html>
