--- a/proyecto pagina/index.html
+++ b/proyecto pagina/index.html
@@ -5,24 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Promiedos Liga Argentina</title>
     <link rel="stylesheet" href="css/index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
     <div>
-    <h1>PROMIEDOS LIGA ARGENTINA</h1>
+    <h1>LIGA ARGENTINA 2024</h1>
     <br>
-    <a id="a1" href="tablaLiga2024.html">
-     Tabla De La Liga2024
-    </a>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/8/85/Logo_lpf_afa.png" alt="Logo Fútbol">
+                <span>Fútbol en Vivo</span>
+            </div>
+            <ul class="nav-links">
+                <li><a href="registro.html">Registro</a></li>
+                <li><a href="tablaLiga2024.html">Liga 2024</a></li>
+                <li><a href="tablaAnual.html">Tabla Anual</a></li>
+                <li><a href="GyA.html">Goleadores y Asistentes</a></li>
+                <li><a href="inicioSesion.html">Iniciar Sesion</a></li>
+            </ul>
+            <div class="search">
+                <input type="text" placeholder="Buscar...">
+            </div>
+        </nav>   
     <br>
     <br>
-    <a id="a2" href="tablaAnual.html">
-        Tabla Anual
-    </a>
-    <br>
-    <br>
-    <a id="a3" href="promedios.html">
-        Promedios
-    </a>
     </div>
+    <section class="futbol-argentino">
+        <div class="container">
+            <div class="descripcion">
+                <h2>Fútbol Argentino</h2>
+                <p>El fútbol argentino es uno de los más grandes del mundo, reconocido por su pasión, historia y talento. Equipos como Boca Juniors, River Plate, Independiente y Racing han marcado una huella imborrable en la historia del deporte. Argentina tiene muchos campeones y torneos interesantes,como la liga,copa Argentina,Supercopa Argentina,etc.</p>
+            </div>
+
+            <div class="copas-galeria">
+                <div class="copa">
+                    <img src="https://i.pinimg.com/originals/15/54/28/15542815aa81013c0bc7a03ba6f91576.jpg" alt="Liga Profesional" />
+                    <h3>Liga Profesional</h3>
+                </div>
+                <div class="copa">
+                    <img src="https://todosalta.com/download/multimedia.normal.86d5a88b1834eb85.576861747341707020496d61676520323032322d31302d32362061742031332e5f6e6f726d616c2e77656270.webp" alt="Copa Argentina" />
+                    <h3>Copa Argentina</h3>
+                </div>
+                <div class="copa">
+                    <img src="https://pbs.twimg.com/media/GImMdKOWAAAvDz_?format=jpg&name=4096x4096" alt="Supercopa" />
+                    <h3>Supercopa Argentina</h3>
+                </div>
+            </div>
+        </div>
+    </section> 
+    <footer>
+        <div class="footer-container">
+            <div class="footer-logo">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/8/85/Logo_lpf_afa.png" alt="Logo Fútbol Argentino">
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Fútbol Argentino. Todos los derechos reservados.
+                </p>
+                <p>&copy; contacto maldonadon989@gmail.com</p>
+            </div>
+    </footer>   
 </body>
 </html>
