--- a/proyecto pagina/tablaLiga2024.html
+++ b/proyecto pagina/tablaLiga2024.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabla de Equipos de Fútbol</title>
     <link rel="stylesheet" href="./css/tabla2024.css">
 </head>
-
 <body>
+    <a id="a2" href="index.html">
+        Volver
+       </a>
     <div class="container">
         <h1>Tabla de Clasificación</h1>
         <table class="tabla-equipos">
@@ -122,235 +123,235 @@
                     <td>27</td>
                     <td>23</td>
                     <td>+4</td>
-                <tr>
-                    <td>9</td>
-                    <td>Riestra</td>
-                    <td>22</td>
-                    <td>31</td>
-                    <td>8</td>
-                    <td>7</td>
-                    <td>7</td>
-                    <td>23</td>
-                    <td>23</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>10</td>
-                    <td>Independiente</td>
-                    <td>22</td>
-                    <td>30</td>
-                    <td>6</td>
-                    <td>12</td>
-                    <td>4</td>
-                    <td>19</td>
-                    <td>14</td>
-                    <td>+5</td>
-                </tr>
-                <tr>
-                    <td>11</td>
-                    <td>Estudiantes(LP)</td>
-                    <td>22</td>
-                    <td>30</td>
-                    <td>7</td>
-                    <td>9</td>
-                    <td>6</td>
-                    <td>25</td>
-                    <td>23</td>
-                    <td>+2</td>
-                </tr>
-                <tr>
-                    <td>12</td>
-                    <td>Instituto</td>
-                    <td>22</td>
-                    <td>29</td>
-                    <td>8</td>
-                    <td>5</td>
-                    <td>8</td>
-                    <td>27</td>
-                    <td>22</td>
-                    <td>+5</td>
-                </tr>
-                <tr>
-                    <td>13</td>
-                    <td>Gimnasia(LP)</td>
-                    <td>22</td>
-                    <td>29</td>
-                    <td>7</td>
-                    <td>8</td>
-                    <td>7</td>
-                    <td>20</td>
-                    <td>19</td>
-                    <td>+1</td>
-                </tr>
-                <tr>
-                    <td>14</td>
-                    <td>Platense</td>
-                    <td>22</td>
-                    <td>29</td>
-                    <td>7</td>
-                    <td>8</td>
-                    <td>6</td>
-                    <td>17</td>
-                    <td>16</td>
-                    <td>+1</td>
-                </tr>
-                <tr>
-                    <td>15</td>
-                    <td>GodoyCruz</td>
-                    <td>22</td>
-                    <td>28</td>
-                    <td>6</td>
-                    <td>10</td>
-                    <td>6</td>
-                    <td>23</td>
-                    <td>24</td>
-                    <td>-1</td>
-                </tr>
-                <tr>
-                    <td>16</td>
-                    <td>SanLorenzo</td>
-                    <td>22</td>
-                    <td>28</td>
-                    <td>7</td>
-                    <td>7</td>
-                    <td>8</td>
-                    <td>18</td>
-                    <td>19</td>
-                    <td>-1</td>
-                </tr>
-                <tr>
-                    <td>17</td>
-                    <td>Belgrano</td>
-                    <td>22</td>
-                    <td>27</td>
-                    <td>6</td>
-                    <td>9</td>
-                    <td>6</td>
-                    <td>24</td>
-                    <td>24</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>18</td>
-                    <td>Tigre</td>
-                    <td>22</td>
-                    <td>26</td>
-                    <td>6</td>
-                    <td>8</td>
-                    <td>7</td>
-                    <td>25</td>
-                    <td>24</td>
-                    <td>+1</td>
-                </tr>
-                <tr>
-                    <td>19</td>
-                    <td>Lanus</td>
-                    <td>22</td>
-                    <td>26</td>
-                    <td>6</td>
-                    <td>8</td>
-                    <td>7</td>
-                    <td>22</td>
-                    <td>28</td>
-                    <td>-6</td>
-                </tr>
-                <tr>
-                    <td>20</td>
-                    <td>RosarioCentral</td>
-                    <td>22</td>
-                    <td>25</td>
-                    <td>6</td>
-                    <td>7</td>
-                    <td>9</td>
-                    <td>23</td>
-                    <td>22</td>
-                    <td>+1</td>
-                </tr>
-                <tr>
-                    <td>21</td>
-                    <td>CentraCba(SdE)</td>
-                    <td>22</td>
-                    <td>25</td>
-                    <td>6</td>
-                    <td>7</td>
-                    <td>9</td>
-                    <td>23</td>
-                    <td>28</td>
-                    <td>-5</td>
-                </tr>
-                <tr>
-                    <td>22</td>
-                    <td>IndRivadavia</td>
-                    <td>22</td>
-                    <td>25</td>
-                    <td>6</td>
-                    <td>7</td>
-                    <td>9</td>
-                    <td>15</td>
-                    <td>23</td>
-                    <td>-8</td>
-                </tr>
-                <tr>
-                    <td>23</td>
-                    <td>Argentinos</td>
-                    <td>22</td>
-                    <td>23</td>
-                    <td>6</td>
-                    <td>5</td>
-                    <td>10</td>
-                    <td>17</td>
-                    <td>22</td>
-                    <td>-5</td>
-                </tr>
-                <tr>
-                    <td>24</td>
-                    <td>Banfield</td>
-                    <td>22</td>
-                    <td>22</td>
-                    <td>5</td>
-                    <td>7</td>
-                    <td>9</td>
-                    <td>20</td>
-                    <td>27</td>
-                    <td>-7</td>
-                </tr>
-                <tr>
-                    <td>25</td>
-                    <td>DefYJusticia</td>
-                    <td>22</td>
-                    <td>22</td>
-                    <td>5</td>
-                    <td>7</td>
-                    <td>9</td>
-                    <td>19</td>
-                    <td>30</td>
-                    <td>-11</td>
-                </tr>
-                <tr>
-                    <td>26</td>
-                    <td>Sarmiento(J)</td>
-                    <td>22</td>
-                    <td>21</td>
-                    <td>4</td>
-                    <td>9</td>
-                    <td>9</td>
-                    <td>15</td>
-                    <td>23</td>
-                    <td>-8</td>
-                </tr>
-                <tr>
-                    <td>27</td>
-                    <td>Newells</td>
-                    <td>22</td>
-                    <td>21</td>
-                    <td>5</td>
-                    <td>6</td>
-                    <td>11</td>
-                    <td>15</td>
-                    <td>29</td>
-                    <td>-14</td>
-                </tr>
-                <tr>
+                    <tr>
+                        <td>9</td>
+                        <td>Riestra</td>
+                        <td>22</td>
+                        <td>31</td>
+                        <td>8</td>
+                        <td>7</td>
+                        <td>7</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>10</td>
+                        <td>Independiente</td>
+                        <td>22</td>
+                        <td>30</td>
+                        <td>6</td>
+                        <td>12</td>
+                        <td>4</td>
+                        <td>19</td>
+                        <td>14</td>
+                        <td>+5</td>
+                    </tr>
+                    <tr>
+                        <td>11</td>
+                        <td>Estudiantes(LP)</td>
+                        <td>22</td>
+                        <td>30</td>
+                        <td>7</td>
+                        <td>9</td>
+                        <td>6</td>
+                        <td>25</td>
+                        <td>23</td>
+                        <td>+2</td>
+                    </tr>
+                    <tr>
+                        <td>12</td>
+                        <td>Instituto</td>
+                        <td>22</td>
+                        <td>29</td>
+                        <td>8</td>
+                        <td>5</td>
+                        <td>8</td>
+                        <td>27</td>
+                        <td>22</td>
+                        <td>+5</td>
+                    </tr>
+                    <tr>
+                        <td>13</td>
+                        <td>Gimnasia(LP)</td>
+                        <td>22</td>
+                        <td>29</td>
+                        <td>7</td>
+                        <td>8</td>
+                        <td>7</td>
+                        <td>20</td>
+                        <td>19</td>
+                        <td>+1</td>
+                    </tr>
+                    <tr>
+                        <td>14</td>
+                        <td>Platense</td>
+                        <td>22</td>
+                        <td>29</td>
+                        <td>7</td>
+                        <td>8</td>
+                        <td>6</td>
+                        <td>17</td>
+                        <td>16</td>
+                        <td>+1</td>
+                    </tr>
+                    <tr>
+                        <td>15</td>
+                        <td>GodoyCruz</td>
+                        <td>22</td>
+                        <td>28</td>
+                        <td>6</td>
+                        <td>10</td>
+                        <td>6</td>
+                        <td>23</td>
+                        <td>24</td>
+                        <td>-1</td>
+                    </tr>
+                    <tr>
+                        <td>16</td>
+                        <td>SanLorenzo</td>
+                        <td>22</td>
+                        <td>28</td>
+                        <td>7</td>
+                        <td>7</td>
+                        <td>8</td>
+                        <td>18</td>
+                        <td>19</td>
+                        <td>-1</td>
+                    </tr>
+                    <tr>
+                        <td>17</td>
+                        <td>Belgrano</td>
+                        <td>22</td>
+                        <td>27</td>
+                        <td>6</td>
+                        <td>9</td>
+                        <td>6</td>
+                        <td>24</td>
+                        <td>24</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>18</td>
+                        <td>Tigre</td>
+                        <td>22</td>
+                        <td>26</td>
+                        <td>6</td>
+                        <td>8</td>
+                        <td>7</td>
+                        <td>25</td>
+                        <td>24</td>
+                        <td>+1</td>
+                    </tr>
+                    <tr>
+                        <td>19</td>
+                        <td>Lanus</td>
+                        <td>22</td>
+                        <td>26</td>
+                        <td>6</td>
+                        <td>8</td>
+                        <td>7</td>
+                        <td>22</td>
+                        <td>28</td>
+                        <td>-6</td>
+                    </tr>
+                    <tr>
+                        <td>20</td>
+                        <td>RosarioCentral</td>
+                        <td>22</td>
+                        <td>25</td>
+                        <td>6</td>
+                        <td>7</td>
+                        <td>9</td>
+                        <td>23</td>
+                        <td>22</td>
+                        <td>+1</td>
+                    </tr>
+                    <tr>
+                        <td>21</td>
+                        <td>CentraCba(SdE)</td>
+                        <td>22</td>
+                        <td>25</td>
+                        <td>6</td>
+                        <td>7</td>
+                        <td>9</td>
+                        <td>23</td>
+                        <td>28</td>
+                        <td>-5</td>
+                    </tr>
+                    <tr>
+                        <td>22</td>
+                        <td>IndRivadavia</td>
+                        <td>22</td>
+                        <td>25</td>
+                        <td>6</td>
+                        <td>7</td>
+                        <td>9</td>
+                        <td>15</td>
+                        <td>23</td>
+                        <td>-8</td>
+                    </tr>
+                    <tr>
+                        <td>23</td>
+                        <td>Argentinos</td>
+                        <td>22</td>
+                        <td>23</td>
+                        <td>6</td>
+                        <td>5</td>
+                        <td>10</td>
+                        <td>17</td>
+                        <td>22</td>
+                        <td>-5</td>
+                    </tr>
+                    <tr>
+                        <td>24</td>
+                        <td>Banfield</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>5</td>
+                        <td>7</td>
+                        <td>9</td>
+                        <td>20</td>
+                        <td>27</td>
+                        <td>-7</td>
+                    </tr>
+                    <tr>
+                        <td>25</td>
+                        <td>DefYJusticia</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>5</td>
+                        <td>7</td>
+                        <td>9</td>
+                        <td>19</td>
+                        <td>30</td>
+                        <td>-11</td>
+                    </tr>
+                    <tr>
+                        <td>26</td>
+                        <td>Sarmiento(J)</td>
+                        <td>22</td>
+                        <td>21</td>
+                        <td>4</td>
+                        <td>9</td>
+                        <td>9</td>
+                        <td>15</td>
+                        <td>23</td>
+                        <td>-8</td>
+                    </tr>
+                    <tr>
+                        <td>27</td>
+                        <td>Newells</td>
+                        <td>22</td>
+                        <td>21</td>
+                        <td>5</td>
+                        <td>6</td>
+                        <td>11</td>
+                        <td>15</td>
+                        <td>29</td>
+                        <td>-14</td>
+                    </tr>
+                    <tr>
                     <td>28</td>
                     <td>Barracas</td>
                     <td>22</td>
@@ -366,9 +367,17 @@
             </tbody>
         </table>
     </div>
-    <a id="tabla-de-goleadores" href="GyA.html">
-        Tabla De Goleadores y Asistidores
-    </a>
+    <br>
+    <br>
+    <br>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-logo">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/8/85/Logo_lpf_afa.png" alt="Logo Fútbol Argentino">
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Fútbol Argentino. Todos los derechos reservados.</p>
+            </div>
+    </footer> 
 </body>
-
 </html>
